# CosmicCoreBox

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  test1.py  test3.py
cosmology_uphi/: __init__.py  cosm_para.py  field.py  fplt.py  particle_data.py  ps_data.py
cosmology_uphi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cosmology_uphi/data/: binned_correction.py  gaussian_field.py  sigma8.py
cosmology_uphi/fast_plot/: fplt.py
cosmology_uphi/growth/: factor.py
cosmology_uphi/pm_data/: pm_data_class.py
cosmology_uphi/power_spectrum/: estimator.py
src/cosmic_core_box/: __init__.py
src/cosmic_core_box/process/: __init__.py  ab_match.py  halo_web.py
src/cosmic_core_box/samples/: __init__.py  field.py  halo.py
src/cosmic_core_box/sims/: snapshots.py
src/cosmic_core_box/sims/conifg/: tng_dark.json
src/pyccb/: __init__.py
src/pyccb/process/: __init__.py  halo_web.py  weighting.py
src/pyccb/samples/: __init__.py  field.py  halo.py
src/pyccb/sims/: __init__.py  config.py  trees.py
test/: test2.py
